<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

        <LinearLayout
            android:id="@+id/homeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_margin="20dp" />
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:rowCount="4"
                    android:columnCount="2"
                    android:layoutAnimation="@anim/layout_anim_dashboard"
                    android:layout_margin="5dp"
                    android:alignmentMode="alignMargins"
                    android:layout_gravity="center_horizontal"
                    android:columnOrderPreserved="false">
                        <androidx.cardview.widget.CardView
                                android:id="@+id/crdList"
                                android:layout_width="170dp"
                                android:layout_height="170dp"
                                app:cardCornerRadius="12dp"
                                app:cardElevation="5dp"
                                app:cardBackgroundColor="@color/center_light_blue"
                                android:layout_margin="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                                <ImageView
                                    android:layout_width="84dp"
                                    android:layout_height="84dp"
                                    android:src="@drawable/satdashboard"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/satellite_list"
                                    android:textSize="16sp"
                                    android:layout_marginTop="20dp"
                                    android:textColor="@color/white"/>
                        </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crdForm"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="5dp"
                            app:cardBackgroundColor="@color/center_light_blue"
                            android:layout_margin="10dp">
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:gravity="center">
                                        <ImageView
                                            android:layout_marginLeft="10dp"
                                            android:layout_width="84dp"
                                            android:layout_height="84dp"
                                            android:src="@drawable/formdashboard"/>

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/add_sat"
                                            android:textSize="16sp"
                                            android:layout_marginTop="20dp"
                                            android:textColor="@color/white"/>
                                </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crdSatTypes"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="5dp"
                            app:cardBackgroundColor="@color/center_light_blue"
                            android:layout_margin="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">
                                <ImageView
                                    android:layout_width="84dp"
                                    android:layout_height="84dp"
                                    android:src="@drawable/sattypes"/>

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/sat_type"
                                    android:textSize="16sp"
                                    android:layout_marginTop="20dp"
                                    android:textColor="@color/white"/>
                        </LinearLayout>

                </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crdCountries"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/center_light_blue"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="84dp"
                                            android:layout_height="84dp"
                                            android:src="@drawable/countrysats" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="20dp"
                                            android:text="@string/sat_country"
                                            android:textColor="@color/white"
                                            android:textSize="16sp" />
                                </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crdAboutMe"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/center_light_blue"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="84dp"
                                            android:layout_height="84dp"
                                            android:src="@drawable/aboutme" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="20dp"
                                            android:text="@string/about_me"
                                            android:textColor="@color/white"
                                            android:textSize="16sp" />
                                </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/crdGoCrayCraaaaay"
                            android:layout_width="170dp"
                            android:layout_height="170dp"
                            android:layout_margin="10dp"
                            app:cardBackgroundColor="@color/center_light_blue"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:orientation="vertical">

                                        <ImageView
                                            android:layout_width="84dp"
                                            android:layout_height="84dp"
                                            android:src="@drawable/gocrazy" />

                                        <TextView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="20dp"
                                            android:text="@string/go_crazy"
                                            android:textColor="@color/white"
                                            android:textSize="16sp" />
                                </LinearLayout>

                        </androidx.cardview.widget.CardView>

                </GridLayout>

        </LinearLayout>

</ScrollView>